--- a/Server/Server.BusinessLogic/Server.BusinessLogic.csproj
+++ b/Server/Server.BusinessLogic/Server.BusinessLogic.csproj
@@ -10,4 +10,10 @@
     <ProjectReference Include="..\Server.Models\Server.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.IdentityModel.Tokens">
+      <HintPath>..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.identitymodel.tokens\5.1.4\lib\netstandard1.4\Microsoft.IdentityModel.Tokens.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
